<resources>
    <string name="app_name">NewsWorth</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="illustration_image">Illustration Image</string>
    <string name="news_worth_logo">News Worth Logo</string>
    <string name="back_button">Back Button</string>
    <string name="sign_up2">Sign Up</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="login2">Login</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="login3">Login</string>
    <string name="back_button2">Back Button</string>
    <string name="sign_up3">Sign Up</string>
    <string name="email2">Email</string>
    <string name="mobile2">Mobile</string>
    <string name="i_agree_with_the">I agree with the</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="send_otp">Send OTP</string>
    <string name="already_have_an_account_yet">Already have an account yet?</string>
    <string name="register">Register</string>
    <string name="enter_your_details_to_register">Enter your details to register</string>
    <string name="back_button3">Back Button</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="done">Done</string>
    <string name="verified_successfully">Verified Successfully!</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="upload">Upload</string>
    <string name="cart_icon_description">cart_icon_description</string>
    <string name="description_placeholder_text">Description placeholder text</string>
    <string name="title_placeholder">Title Placeholder</string>
    <string name="play_icon">Play Icon</string>
    <string name="video_description">Video Description</string>
    <string name="images_section">Images Section</string>
    <string name="sample_title">Sample Title</string>
    <string name="sample_description">Sample Description</string>
    <string name="imageicon">ImageIcon</string>
    <string name="read_more">Read More..</string>
    <string name="cart_icon_description2">cart_icon_description</string>
    <string name="description_placeholder_text2">Description placeholder text</string>
    <string name="title_placeholder2">Title Placeholder</string>
    <string name="icon_description">Icon Description</string>
    <string name="image_description">Image Description</string>
    <string name="cart_icon_description3">cart_icon_description</string>
    <string name="description_placeholder_text3">Description placeholder text</string>
    <string name="title_placeholder3">Title Placeholder</string>
    <string name="image_description2">Image Description</string>
    <string name="record">Record</string>
    <string name="start_recording">Start Recording</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="video_preview">video_preview</string>
    <string name="upload2">Upload</string>
    <string name="placeholder_image">placeholder_image</string>
    <string name="logout">Logout</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="my_orders">My Orders</string>
    <string name="orders_icon">Orders Icon</string>
    <string name="my_journals">My Journals</string>
    <string name="journals_icon">Journals Icon</string>
    <string name="logout2">Logout</string>
    <string name="logout3">Logout</string>
    <string name="fashion">Fashion</string>
    <string name="fashion2">Fashion</string>
    <string name="wildlife">Wildlife</string>
    <string name="wildlife2">Wildlife</string>
    <string name="educational">Educational</string>
    <string name="educational2">Educational</string>
    <string name="health">Health</string>
    <string name="health2">Health</string>
    <string name="business">Business</string>
    <string name="business2">Business</string>
    <string name="sports">Sports</string>
    <string name="sports2">Sports</string>
    <string name="entertainment">Entertainment</string>
    <string name="entertainment2">Entertainment</string>
    <string name="general_news">General News</string>
    <string name="general_news2">General News</string>
    <string name="audios">Audios</string>
    <string name="audios2">Audios</string>
    <string name="videos">Videos</string>
    <string name="videos2">Videos</string>
    <string name="images">Images</string>
    <string name="images2">Images</string>
    <string name="home">Home</string>
    <string name="home2">Home</string>
    <string name="creator">Creator</string>
    <string name="b_sai_kumar">B Sai Kumar</string>
    <string name="user_profile">User Profile</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="person_icon">person icon</string>
    <string name="home3">Home</string>
    <string name="home_icon">Home Icon</string>
    <string name="more">More</string>
    <string name="audios3">Audios</string>
    <string name="more2">More</string>
    <string name="videos3">Videos</string>
    <string name="more3">More</string>
    <string name="images3">Images</string>
    <string name="welcome_sai">Welcome Sai</string>
    <string name="notification_icon">notification icon</string>
    <string name="notification_icon2">notification icon</string>
    <string name="menu_image">menu image</string>
    <string name="menu_icon">menu icon</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_user">My Files</string>
    <string name="title_other">Account</string>


</resources>
