<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/news_worth_logo"
        android:layout_gravity="center"
        android:layout_marginTop="89dp"
        android:src="@drawable/image11" />

    <!-- Banner ViewPager2 -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/bannerViewPager"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:overScrollMode="never" />

    <!-- Dots Indicator -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/bannerIndicator"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        app:tabIndicatorHeight="0dp"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/gray" />

    <!-- Sign Up Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/rectangular_button"
        android:fontFamily="@font/poppins_regular"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangular_button"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_regular"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version 1.0.1"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="12dp"
        android:textColor="@color/gray"/>

</LinearLayout>
