<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="31dp">

        <!-- Back Button -->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            app:tint="?attr/imageTint"
            android:src="@drawable/back_arrow"
            tools:ignore="ContentDescription" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="My Profile"
            android:textColor="#1B6EBC"
            android:textSize="24dp" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <!-- Profile Image View -->
                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/avthar_image2"
                    android:background="@drawable/circular_shapes"
                    android:contentDescription="User Profile"
                    android:scaleType="centerCrop"
                    android:clipToOutline="true"
                    android:outlineProvider="background" />

                <!-- Camera Icon -->
                <ImageView
                    android:id="@+id/cameraIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end|bottom"
                    android:background="@drawable/editprofilepic"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="12dp"
                    android:contentDescription="Change Profile Picture"
                    tools:ignore="ContentDescription" />
            </FrameLayout>
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/users_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User ID"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

        <!-- My Profile Section -->
        <LinearLayout
            android:id="@+id/profile_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profilepage_background"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/journals_icon"
                android:src="@drawable/user_profiles" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Profile"
                android:textColor="#1B6EBC"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Password Change Section -->
        <LinearLayout
            android:id="@+id/change_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/profilepage_background"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/journals_icon"
                android:src="@drawable/change_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Change Password"
                android:textColor="#1B6EBC"
                android:textSize="14sp" />
        </LinearLayout>
        <!-- My Journals Section -->
    <LinearLayout
        android:id="@+id/myJournals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/profilepage_background"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/journals_icon"
            android:src="@drawable/my_journals" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/my_journals"
            android:textColor="#1B6EBC"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Logout Section -->
    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/profilepage_background"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/logout_icon"
            android:src="@drawable/logout_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/logout"
            android:textColor="#1B6EBC"
            android:textSize="14sp" />
    </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="-20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp">

        <LinearLayout
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_nav"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/userHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/home_icon"
                    android:src="@drawable/home_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/home3"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/person_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/person_icon"
                    android:src="@drawable/person_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/profile"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>


        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:layout_above="@id/bottom_nav"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-20dp"
            android:background="@drawable/circle_shape"
            android:contentDescription="@string/add"
            android:src="@drawable/fab"
            app:tint="@color/white" />

    </RelativeLayout>
</RelativeLayout>
