<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <!-- Title Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:boxBackgroundMode="outline"
            app:counterEnabled="false"
            app:counterMaxLength="100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:maxLength="100"
                android:textSize="16sp"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:boxBackgroundMode="outline"
            app:counterEnabled="false"
            app:counterMaxLength="250">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLength="250"
                android:minLines="3"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Price Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Price"
            app:boxBackgroundMode="outline"
            app:counterEnabled="false"
            app:counterMaxLength="8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="number"
                android:maxLength="8"
                android:textSize="16sp"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Discount Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Discount Percent"
            app:boxBackgroundMode="outline"
            app:counterEnabled="false"
            app:counterMaxLength="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="16sp"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Tags Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tags"
            app:boxBackgroundMode="outline"
            app:counterEnabled="false"
            app:counterMaxLength="100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:maxLength="100"
                android:textSize="16sp"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="16dp">-->
        <!-- ImageView for displaying image -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/placeholder_image"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <!-- VideoView for playing videos -->
        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/video_preview"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/btn_play_audio"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/play_button"
            android:visibility="gone"
            tools:ignore="ContentDescription" />
    <!-- Loader -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />
<!--    </LinearLayout>-->
    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangular_button"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/upload2"
        android:layout_margin="10dp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>